# panasonic-programmable-keys

./: .gitignore  pyproject.toml  tox.ini
src/panasonic_programmable_keys/: __main__.py  cli.py  config.py  defaults.toml
src/panasonic_programmable_keys/cli/: base.py  cli.py
src/panasonic_programmable_keys/gui/: gui.py
src/panasonic_programmable_keys/input/: __init__.py  capture.py  models.py
src/panasonic_programmable_keys/rpc/: client.py  server.py
src/panasonic_programmable_keys/util/: __init__.py  config.py  defaults.toml  logging.py
tests/: example_devices.py  test_models.py
